Ireer 65 bis onboarding request integration test + code smell fix (#5)
* IREER-65 Starting integration test for onboarding request

* IREER-65 integration test for onboarding request

* Fix code smell in testing

* Fix test for AdmissibilityAssessorProcessor

* IREER-65 Eliminated service for rest call to Initiative

Co-authored-by: GiovanaSolorzano <gisolorz@emeal.nttdata.com>