@@ -15,7 +15,6 @@ import org.springframework.boot.test.mock.mockito.SpyBean;
 import org.springframework.test.context.TestPropertySource;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @TestPropertySource(properties = {
@@ -31,13 +30,13 @@ public class BeneficiaryRuleConsumerConfigIntegrationTest extends BaseIntegratio
     private OnboardingContextHolderService onboardingContextHolderServiceSpy;
 
     @Test
-    public void testBeneficiaryRuleBuilding(){
+    void testBeneficiaryRuleBuilding(){
         int N=100;
         int[] expectedRules ={0};
         List<Initiative2BuildDTO> initiatives = IntStream.range(0,N)
                 .mapToObj(Initiative2BuildDTOFaker::mockInstance)
                 .peek(i->expectedRules[0]+=i.getBeneficiaryRule().getAutomatedCriteria().size())
-                .collect(Collectors.toList());
+                .toList();
 
         long timeStart=System.currentTimeMillis();
         initiatives.forEach(i->publishIntoEmbeddedKafka(topicBeneficiaryRuleConsumer, null, null, i));
@@ -48,12 +47,11 @@ public class BeneficiaryRuleConsumerConfigIntegrationTest extends BaseIntegratio
         waitFor(()->(countSaved[0]=droolsRuleRepository.count().block()) >= N, ()->"Expected %d saved rules, read %d".formatted(N, countSaved[0]), 15, 1000);
         long timeDroolsSavingCheckPublishingEnd=System.currentTimeMillis();
 
-        int[] ruleBuiltSize={0};
-        waitFor(()->(ruleBuiltSize[0]=getRuleBuiltSize()) >= expectedRules[0], ()->"Expected %d rules, read %d".formatted(expectedRules[0], ruleBuiltSize[0]), 10, 500);
+        int ruleBuiltSize = waitForKieContainerBuild(expectedRules[0]);
         long timeEnd=System.currentTimeMillis();
 
         Assertions.assertEquals(N, countSaved[0]);
-        Assertions.assertEquals(expectedRules[0], ruleBuiltSize[0]);
+        Assertions.assertEquals(expectedRules[0], ruleBuiltSize);
 
         Mockito.verify(kieContainerBuilderServiceSpy, Mockito.atLeast(2)).buildAll(); // +1 due to refresh at startup
         Mockito.verify(onboardingContextHolderServiceSpy, Mockito.atLeast(1)).setBeneficiaryRulesKieContainer(Mockito.any());
@@ -79,12 +77,19 @@ public class BeneficiaryRuleConsumerConfigIntegrationTest extends BaseIntegratio
         );
     }
 
-    private int getRuleBuiltSize() {
+    private int waitForKieContainerBuild(int expectedRules) {return waitForKieContainerBuild(expectedRules, onboardingContextHolderServiceSpy);}
+    public static int waitForKieContainerBuild(int expectedRules,OnboardingContextHolderService onboardingContextHolderServiceSpy) {
+        int[] ruleBuiltSize={0};
+        waitFor(()->(ruleBuiltSize[0]=getRuleBuiltSize(onboardingContextHolderServiceSpy)) >= expectedRules, ()->"Expected %d rules, read %d".formatted(expectedRules, ruleBuiltSize[0]), 10, 500);
+        return ruleBuiltSize[0];
+    }
+
+    public static int getRuleBuiltSize(OnboardingContextHolderService onboardingContextHolderServiceSpy) {
         KieContainer kieContainer = onboardingContextHolderServiceSpy.getBeneficiaryRulesKieContainer();
         if (kieContainer == null) {
             return 0;
         } else {
-            KiePackage kiePackage = kieContainer.getKieBase().getKiePackage(KieContainerBuilderServiceImpl.rulesBuiltPackage);
+            KiePackage kiePackage = kieContainer.getKieBase().getKiePackage(KieContainerBuilderServiceImpl.RULES_BUILT_PACKAGE);
             return kiePackage != null
                     ? kiePackage.getRules().size()
                     : 0;
